<resources>
    <string name="app_name">Мои словари</string>

    <!--Layout-->
    <string name="layout_tv_hint_en">На английском</string>
    <string name="layout_tv_hint_ru">На русском</string>
    <string name="layout_tv_english_word">На английском:</string>
    <string name="layout_tv_russian_word">На русском:</string>
    <string name="layout_tv_dictionary">Словарь:</string>
    <string name="layout_tv_dictionaries">Словари:</string>
    <string name="layout_tv_training_mode">Режим тренировки:</string>
    <string name="layout_tv_translation_direction">Направление перевода:</string>
    <string name="layout_tv_count_of_words">Количество слов:</string>
    <string name="layout_tv_from">из</string>
    <string name="layout_tv_word_s">Слов -</string>
    <string name="layout_rb_translate_word">Переведите слово</string>
    <string name="layout_rb_choose_translate">Выберите правильный перевод (Недоступно)</string>
    <string name="layout_rb_random">В случайном порядке</string>
    <string name="layout_rb_like_in_a_dictionary">Как в словаре</string>
    <string name="layout_rb_en_to_ru">С Английского на Русский</string>
    <string name="layout_rb_ru_to_en">С Русского на Английский</string>
    <string name="layout_btn_start_training">Начать тренировку</string>
    <string name="layout_btn_choose_dictionaries">Выбрать словари</string>
    <string name="layout_switch_auto_continue">Переходить к новому слову</string>

    <!--Menu-->
    <string name="menu_add_new_word">Добавить слово</string>
    <string name="menu_rename_dictionary">Переименовать словарь</string>
    <string name="menu_delete_dictionary">Удалить словарь</string>
    <string name="navigation_my_dictionaries">Мои словари</string>
    <string name="navigation_training">Тренировка</string>
    <string name="navigation_settings">Настройки</string>
    <string name="navigation_about_app">О приложении</string>
    <string name="navigation_open">Открыть</string>
    <string name="navigation_close">Закрыть</string>

    <!--Titles-->
    <string name="title_my_dictionaries">Мои словари</string>
    <string name="title_new_word">Новое слово</string>
    <string name="title_editing_word">Редактирвание слова</string>
    <string name="title_word_details">Слово</string>
    <string name="title_confirm_delete_dictionary">Подтверждение удаление словаря</string>
    <string name="title_confirm_delete">Подтвердить удаление</string>
    <string name="title_add_dictionary_request">Введите название нового словаря:</string>
    <string name="title_dictionary_name">Название словаря</string>
    <string name="title_choose_translate">Выберите перевод</string>
    <string name="title_start_training">Тренировка</string>
    <string name="title_translate_word_training">Переведите слово или фразу</string>
    <string name="title_choose_dictionaries">Словари для тренировки</string>
    <string name="title_exit_training">Выход</string>

    <!--Dialogs-->
    <string name="dialog_choose_dictionary">Выберите словарь</string>
    <string name="dialog_new_dictionary">Новый словарь</string>
    <string name="dialog_message_delete_dictionary">Внимание! Словарь и все слова этого словаря будут удалены!</string>
    <string name="dialog_message_confirm_delete">Вы хотите удалить слово?</string>
    <string name="dialog_message_confirm_exit_training">Вы хотите отменить тренировку? Результат будет потерян.</string>
    <string name="dialog_button_add">Добавить</string>
    <string name="dialog_button_delete">Удалить</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_exit">Выйти</string>
    <string name="dialog_button_cancel">Отмена</string>
    <string name="dialog_button_save">Сохранить</string>
    <string name="dialog_button_all">Отметить все</string>
    <string name="dialog_button_none">Снять все</string>

    <!--SnackBar-->
    <string name="snack_dictionary_added">Новый словарь добавлен</string>
    <string name="snack_dictionary_not_added">Новый словарь не добавлен</string>
    <string name="snack_dictionary_has_existed">Словарь с таким названием уже есть</string>
    <string name="snack_word_added">Новое слово добавлено</string>
    <string name="snack_word_not_added">Новое слово не добавлено</string>
    <string name="snack_word_updated">Слово обновлено</string>
    <string name="snack_word_not_updated">Слово не обновлено</string>
    <string name="snack_dictionary_not_renamed">Словарь не переименован</string>
    <string name="snack_dictionary_renamed">Словарь переименован</string>
    <string name="snack_confirm_exit">Вы хотите выйти?</string>
    <string name="snack_exit">Выйти</string>
    <string name="snack_choose_dictionary">Выберите словарь для тренировки</string>
    <string name="snack_empty_dictionaries">Выбранные словари пустые</string>
    <string name="snack_translate_problem">Перевод не возможен. Обратитесь к разработчику.</string>

    <!--Exception-->
    <string name="exc_invalid_query_uri">Invalid QUERY URI </string>
    <string name="exc_invalid_insert_uri">Invalid INSERT URI </string>
    <string name="exc_invalid_update_uri">Invalid UPDATE URI </string>
    <string name="exc_invalid_delete_uri">Invalid DELETE URI </string>
    <string name="exc_insert_into_words_failed">Вставка в таблицу Words не произошла</string>
    <string name="exc_insert_into_dictionaries_failed">Вставка в таблицу Dictionaries не произошла</string>
    <string name="exc_empty_saved_instance_state">Empty savedInstanceState</string>
    <string name="exc_system_random_error">System Random Error</string>

    <!--Arrays-->
    <string-array name="count_of_words">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>Все</item>
    </string-array>

</resources>
