<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.velychko.kyrylo.mydictionaries.ui.fragments.StartTrainingFragment">

    <TextView
        android:id="@+id/tvDictionary"
        style="@style/FinalTextViewStartTraining"
        android:layout_marginTop="16dp"
        android:text="@string/layout_tv_dictionaries" />

    <Button
        android:id="@+id/btnChooseDictionaries"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@id/tvDictionary"
        android:layout_alignEnd="@+id/spnChooseCountOfWords"
        android:layout_alignRight="@+id/spnChooseCountOfWords"
        android:text="@string/layout_btn_choose_dictionaries"
        android:textSize="15sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvDictionaries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnChooseDictionaries"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        tools:layout_height="0dp" />

    <TextView
        android:id="@+id/tvTrainingMode"
        style="@style/FinalTextViewStartTraining"
        android:layout_below="@id/rvDictionaries"
        android:text="@string/layout_tv_training_mode" />

    <RadioGroup
        android:id="@+id/rgTrainingMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTrainingMode"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp">

        <RadioButton
            android:id="@+id/rbTranslateWord"
            style="@style/RadioButtonStartTraining"
            android:checked="true"
            android:text="@string/layout_rb_translate_word" />

        <RadioButton
            android:id="@+id/rbChooseTranslate"
            style="@style/RadioButtonStartTraining"
            android:checked="false"
            android:clickable="false"
            android:text="@string/layout_rb_choose_translate"
            android:textColor="@color/unavailable" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvTranslationDirection"
        style="@style/FinalTextViewStartTraining"
        android:layout_below="@id/rgTrainingMode"
        android:text="@string/layout_tv_translation_direction" />

    <RadioGroup
        android:id="@+id/rgTranslationDirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTranslationDirection"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp">

        <RadioButton
            android:id="@+id/rbRandom"
            style="@style/RadioButtonStartTraining"
            android:checked="true"
            android:text="@string/layout_rb_random" />

        <RadioButton
            android:id="@+id/rbLikeInADictionary"
            style="@style/RadioButtonStartTraining"
            android:text="@string/layout_rb_like_in_a_dictionary" />

        <RadioButton
            android:id="@+id/rbEnToRu"
            style="@style/RadioButtonStartTraining"
            android:text="@string/layout_rb_en_to_ru" />

        <RadioButton
            android:id="@+id/rbRuToEn"
            style="@style/RadioButtonStartTraining"
            android:text="@string/layout_rb_ru_to_en" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvCountOfWords"
        style="@style/FinalTextViewStartTraining"
        android:layout_below="@id/rgTranslationDirection"
        android:text="@string/layout_tv_count_of_words" />

    <Spinner
        android:id="@+id/spnChooseCountOfWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/switchAutoContinue"
        android:layout_alignRight="@+id/switchAutoContinue"
        android:layout_alignTop="@+id/tvCountOfWords"
        android:textSize="15sp" />

    <Switch
        android:id="@+id/switchAutoContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvCountOfWords"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:checked="true"
        android:text="@string/layout_switch_auto_continue"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnStartTraining"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/layout_btn_start_training"
        android:textSize="18sp" />
</RelativeLayout>
